# tatu-re

./: .gitignore  20221220-Fazer.txt  Dockerfile  README.md  analyse_data.py  app.yaml  dash.py  df - Check.xlsx  df - DAX.DE.xlsx  df - Nikki.xlsx  df - Snp.xlsx  df.xlsx  evaluation_tool.py  main.py  perform_simulation.py  period_splitting.py  pyproject.toml  requirements.txt  timeseries.csv  train_model.py
database for offline testing/: df - DAX.DE.xlsx  df - SnP.xlsx
experiment/: Portfolio.py  README.md  calc.py  calculate_target.ipynb  evaluation.py  getFinancialData.py  main.py  portfolio.py  recommendation_engine.py  run_model.py  send_email.py  strategies_comparison.py  utils.py
experiment/resources/: ListOfClients.xlsx
product/: README.md
research/: run_model.py
research/docs/: README.md
tatu_re/: __init__.py  indicators.py  model.py  portfolio.py  recommendation_engine.py  target.py  utils.py
tatu_re/evaluation/: __init__.py  evaluation.py  utils.py
tatu_re/model/: __init__.py  data_processing.py  evaluation.py  gaussian_hmm.py  hmm.py  linear_regression.py  train.py  utils.py
tatu_re/model/hmm/: __init__.py  hmm.py  train.py
tatu_re/portfolio/: benchmark.py  portfolio.py  utils.py
